src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>ProjectedDropCount__c</fullName>
        <label>Projected Drop Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedGrossLift__c</fullName>
        <formula>ProjectedGrossSales__c + PlatinumLift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Gross + Lift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedGrossSales__c</fullName>
        <label>Projected Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedGross__c</fullName>
        <label>Projected Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedNetGross__c</fullName>
        <label>Projected Net Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedNetPot__c</fullName>
        <label>Projected Net Pot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedPaidTickets__c</fullName>
        <label>Projected Paid Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedSplitPoint__c</fullName>
        <label>Projected Split Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedToBeSharedAmount__c</fullName>
        <label>Projected To Be Shared Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterLNEUserId__c</fullName>
        <formula>Promoter__r.LNEUserId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoter LNE UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PromoterEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicOnSale__c</fullName>
        <label>Public On Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublicVisibilityviaPublicOnSale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drives sharing rules to provide read-only access to all internal users</description>
        <label>Public Visibility via Public On Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PurchaseURL__c</fullName>
        <label>Purchase URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentalBuildOption__c</fullName>
        <label>Rental Build Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build as a Promoted Show</fullName>
                </value>
                <value>
                    <fullName>Build Using Rental Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReservedComps__c</fullName>
        <label>Reserved Comps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReservedKills__c</fullName>
        <label>Reserved Kills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReservedNetGross__c</fullName>
        <description>Populated via PB Flow LNE Ledger Entry Workflow from GL Account 40100 - supports Flag: High Guarantee for Rsvd Net Gross</description>
        <label>Reserved Net Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReservedPaidAttendance__c</fullName>
        <label>Reserved Paid Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_for_Currency_Recalc__c</fullName>
        <formula>IF
(
   ISNULL(CurrencyExchange__c), 
    TRUE, 
     IF
     (
       ISNULL(CurrencyDate__c), 
        IF
        (
            CurrencyExchange__r.IsCurrent__c = FALSE, 
            TRUE, 
            FALSE
        ) , 
        IF
        (
            AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = FALSE)    , 
            IF
            (
               AND(CurrencyExchange__r.StartDate__c &lt;= CurrencyDate__c, CurrencyExchange__r.EndDate__c &gt;= CurrencyDate__c),
               FALSE, 
               TRUE
            ) , 
            IF
            (
               AND(ISBLANK(CurrencyExchange__r.StartDate__c) = FALSE,ISBLANK(CurrencyExchange__r.EndDate__c) = TRUE), 
               IF
               (
                   (CurrencyExchange__r.StartDate__c &gt; CurrencyDate__c) = TRUE, 
                   TRUE, 
                   FALSE
               ) , 
               TRUE
            ) 
        ) 
     ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled for Currency Recalc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondLevelApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second-Level Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SecondLevelApproverForEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecurityLevel__c</fullName>
        <label>Security Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SelloutAverageTicketPrice__c</fullName>
        <label>Sellout Average Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SelloutDropCount__c</fullName>
        <label>Sellout Drop Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SelloutGrossLift__c</fullName>
        <formula>SelloutGrossSales__c + PlatinumLift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sellout Gross + Lift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SelloutGrossSales__c</fullName>
        <label>Sellout Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SelloutPaidTickets__c</fullName>
        <label>Sellout Paid Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SettlementAdjustedGross__c</fullName>
        <label>Settlement Adjusted Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementArtistInclusiveGuarantee__c</fullName>
        <formula>SettlementGuarantee__c +  SettlementArtistSuppliedSL__c  +  SettlementOtherTalentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Settlement Artist Inclusive Guarantee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementArtistShare__c</fullName>
        <label>Settlement Artist Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementArtistSuppliedSL__c</fullName>
        <label>Settlement Artist Supplied S&amp;L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementAverageTicketPrice__c</fullName>
        <label>Settlement Average Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementBackendPercentage__c</fullName>
        <label>Settlement Backend %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SettlementDealCalculation__c</fullName>
        <label>Settlement Deal Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guarantee Only</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Other Talent Amount</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights &amp; Other Talent Amount</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights &amp; Support</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Sound &amp; Lights &amp; Support &amp; Other Talent Amount</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Support</fullName>
                </value>
                <value>
                    <fullName>Inclusive of Support And Other Talent Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SettlementDealType__c</fullName>
        <label>Settlement Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Gross Split Point</fullName>
                </value>
                <value>
                    <fullName>Percentage of Gross</fullName>
                </value>
                <value>
                    <fullName>Percentage of Net</fullName>
                </value>
                <value>
                    <fullName>Promoter Profit</fullName>
                </value>
                <value>
                    <fullName>Retro Gross Deal</fullName>
                </value>
                <value>
                    <fullName>Retro Net Deal</fullName>
                </value>
                <value>
                    <fullName>Step Up Gross Deal</fullName>
                </value>
                <value>
                    <fullName>Step Up Net Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SettlementDeductions__c</fullName>
        <label>Settlement Deductions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementGrossSales__c</fullName>
        <label>Settlement Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementGross__c</fullName>
        <label>Settlement Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementGuarantee__c</fullName>
        <label>Settlement Guarantee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementHouseNut__c</fullName>
        <label>Settlement House Nut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementNetGross__c</fullName>
        <label>Settlement Net Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementNetPot__c</fullName>
        <label>Settlement Net Pot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementNotes__c</fullName>
        <label>Settlement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SettlementOtherTalentAmount__c</fullName>
        <label>Settlement Other Talent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementPaidTickets__c</fullName>
        <label>Settlement Paid Tickets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementPlatinumLift__c</fullName>
        <label>Settlement Platinum Lift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementPromoterEarnings__c</fullName>
        <label>Settlement Promoter Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementRecapComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Settlement Recap Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementRecapCompletedBy__c</fullName>
        <label>Settlement Recap Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettlementSplitPoint__c</fullName>
        <label>Settlement Split Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Settlement Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SettlementToBeSharedAmount__c</fullName>
        <label>Settlement To Be Shared Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SettlementTotalSupportActExpenses__c</fullName>
        <label>Settlement Total Support Act Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShowCountMetric__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;Festival&quot;, 1, ShowCount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Count Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowCount__c</fullName>
        <label>Show Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>&quot;Local Offer&quot;</defaultValue>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusStage__c</fullName>
        <formula>CASE(TEXT(Status__c),
&quot;Draft&quot;, &quot;Plan&quot;,
&quot;Pending Unlikely&quot;, &quot;Plan&quot;,
&quot;Pending Likely&quot;, &quot;Plan&quot;,
&quot;Confirmed&quot;, &quot;Projection&quot;,
&quot;Flash Started&quot;, &quot;Projection&quot;,
&quot;Flash Complete&quot;, &quot;Projection&quot;,
&quot;Artist Passed&quot;, &quot;Plan&quot;,
&quot;LNE Passed&quot;, &quot;Plan&quot;,
&quot;Postponed&quot;, &quot;Projection&quot;,
&quot;Cancelled&quot;, &quot;Projection&quot;,
&quot;Inactive&quot;, &quot;Plan&quot;,
&quot;Plan&quot;)</formula>
        <label>Status Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Unlikely</fullName>
                </value>
                <value>
                    <fullName>Pending Likely</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Flash Started</fullName>
                </value>
                <value>
                    <fullName>Flash Complete</fullName>
                </value>
                <value>
                    <fullName>Artist Passed</fullName>
                </value>
                <value>
                    <fullName>LNE Passed</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EventSubtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumAdvertisingExpenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sum Advertising Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumInsuranceExpenses__c</fullName>
        <label>Sum Insurance Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumOperatingExpenses__c</fullName>
        <label>Sum Operating Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumProductionExpenses__c</fullName>
        <label>Sum Production Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SumTalentFeesExpenses__c</fullName>
        <label>Sum Talent Fees Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TBDBudgetCount__c</fullName>
        <label>TBD Budget Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TBDConfirmedCount__c</fullName>
        <label>TBD Confirmed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TBDMonthValue__c</fullName>
        <formula>TEXT(MONTH(EventLastDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TBDMonthValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBDMonth__c</fullName>
        <label>TBD Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TBDVenue__c</fullName>
        <formula>IF(RecordType.DeveloperName ==&apos;TBDEvents&apos;, False, Venue__r.TBDVenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TBD Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TBDYearValue__c</fullName>
        <formula>TEXT(YEAR(EventLastDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TBDYearValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBDYear__c</fullName>
        <description>Used in TBD Apex logic</description>
        <label>TBD Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TalentOverhead__c</fullName>
        <label>Talent Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TemporaryStageToBeUsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary Stage To Be Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalGuaranteesOverhead__c</fullName>
        <description>The total across artist Deal records for Guarantee + Artist Sound &amp; Lights + Other Talent Amount + Talent Overhead</description>
        <label>Total Guarantees &amp; Overhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSupportActExpenses__c</fullName>
        <description>Total Support Act Expenses</description>
        <label>Total Support Act Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TourName__c</fullName>
        <formula>Tour__r.TourName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour</label>
        <referenceTo>Tour__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UsingHouseNut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>House Nut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsingMultiScale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, event is using separate ticket scales per event date time.</description>
        <label>Using Multi-Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UsingTicketFeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using Ticket Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VenueOracleCompanyId__c</fullName>
        <formula>TEXT(Venue__r.GLCompanyName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Oracle Company Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office when Owned/Operated</description>
        <label>Venue Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueTargetPaidTickets__c</fullName>
        <formula>Venue__r.TargetPaidTickets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue Target Paid Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WavePromoter__c</fullName>
        <description>Wave related field to reduce relationships in Boomi ETL (reduce the SOQL to less than 20000 chars)</description>
        <formula>Promoter__r.FirstName &amp; &quot; &quot; &amp; Promoter__r.LastName</formula>
        <inlineHelpText>Wave related field to reduce relationships in Boomi ETL (reduce the SOQL to less than 20000 chars)</inlineHelpText>
        <label>WavePromoter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxAdjustedGrossPotential__c</fullName>
        <formula>(AdjustedGrossPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Adjusted Gross Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxAdvertisingBudget__c</fullName>
        <formula>(AdvertisingBudget__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Advertising Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxAncillariesPerFan__c</fullName>
        <formula>(AncillariesPerFan__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ancillaries Per Fan (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxArtistCostsPotential__c</fullName>
        <formula>(ArtistCostsPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Artist Costs Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBookingHouseNut__c</fullName>
        <formula>(BookingHouseNut__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Booking House Nut (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxFirstLevelApprovalAmount__c</fullName>
        <formula>(FirstLevelApprovalAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>First-Level Approval Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossPotential__c</fullName>
        <formula>(GrossPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetAncillaries__c</fullName>
        <formula>(NetAncillaries__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Ancillaries (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetGrossPotential__c</fullName>
        <formula>(NetGrossPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Gross Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxNetPotPotential__c</fullName>
        <formula>(NetPotPotential__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Net Pot Potential (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPLAfterPrimaryCoProsAtProjection__c</fullName>
        <formula>(PLAfterPrimaryCoProsAtProjection__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>P/L After Primary Co-Pros At Proj (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPLAfterPrimaryCoProsAtSellout__c</fullName>
        <formula>(PLAfterPrimaryCoProsAtSellout__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>P/L Aft Prim Co-Pros At Sellout (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPlatinumLift__c</fullName>
        <formula>(PlatinumLift__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Platinum Lift (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPotentialSplitPoint__c</fullName>
        <formula>(PotentialSplitPoint__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Potential Split Point (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPotentialToBeSharedAmount__c</fullName>
        <formula>(PotentialToBeSharedAmount__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Potential To Be Shared Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPrevioulsyForecastedLiftBeforeTaxes__c</fullName>
        <formula>(PrevioulsyForecastedLiftBeforeTaxes__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Prev Forecasted Lift Before Taxes (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPreviouslyForecastedGrossSales__c</fullName>
        <formula>(PreviouslyForecastedGrossSales__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Previously Forecasted Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPreviouslyForecastedLiftBeforeFee__c</fullName>
        <formula>(PreviouslyForecastedLiftBeforeFee__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Prev Forecasted Lift Before Fee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPreviouslyForecastedProjPaidTickets__c</fullName>
        <formula>(PreviouslyForecastedProjPaidTickets__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Prev Forecasted Proj Paid Tickets (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPrimaryGuaranteesOverhead__c</fullName>
        <formula>(PrimaryGuaranteesOverhead__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Primary Guarantees &amp; Overhead (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedAdjustedGross__c</fullName>
        <formula>(ProjectedAdjustedGross__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Adjusted Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedArtistCosts__c</fullName>
        <formula>(ProjectedArtistCosts__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Artist Costs (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedAverageTicketPrice__c</fullName>
        <formula>(ProjectedAverageTicketPrice__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Average Ticket Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedContributionMargin__c</fullName>
        <formula>(ProjectedContributionMargin__c / (CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Contribution Margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>